fixes on otp
